Revision history for perl distribution Convos

0.99_27 Not Released
 - Fix going to connection dialog after connection save
 - Fix hitting enter/return inside the "Dialog name" field on "Join dialog"
 - Fix joining channel which you are already part of
 - Will detect if Javascript is disabled and notify user
 - Add support for notifications on keywords #142

0.99_26 2017-02-20T23:11:01+0100
 - Fix scrolling of sidebars and main menu
 - Change "Edit profile" to "Settings"

0.99_25 2017-02-20T22:46:07+0100
 - Fix sending server messages to the right dialog
 - Fix joining a dialog by clicking on the dialog name
 - Fix first shown channel shows all users inactive #321
 - Fix creating dialog on /QUERY
 - Fix notifications are disabled when window is active
 - Add better handling of "create dialog" errors
 - Add functionality to only enrich visible links
 - Add better "rich link" caching
 - Add "Convos icon" to notification popup
 - Change default sorting to "lastRead"

0.99_24 2017-01-29T00:57:30+0100
 - Fix registration process
 - Fix being able to show profile + help during wizard
 - Fix width of embedded youtube videos on small screens
 - Fix zooming images inline in chat
 - Fix not matching markdown, because a link was injected
 - Fix "/me message your_nick" mention rendering
 - Fix markdown rendering
 - Improved materialbox rendering for huge images
 - Can send/receive any IRC message #317
 - Add "esc key" to close on materialbox
 - Add listing of available rooms to "Join dialog..." #309

0.99_23 2017-01-13T23:05:39+0100
 - Fix adding notifications in frontend
 - Fix saving userinfo in connection URL
 - Will close dropdown when clicking outside of the dropdown
 - Will ask for password if channel has mode +k

0.99_22 2017-01-10T23:32:19+0100
 - Fix use of CONVOS_ORGANIZATION_URL #307
 - Fix unread count should not be increased on join/part/quit/... messages
 - Fix going from "disconnected" to "reconnect" on connection save